[package]
name = "wasm-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.50"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3.61", features = ["Window", "console", "Document", "EventTarget", "Node", "Element"] }
gloo-utils = "0.1.6"
