[package]
name = "wasm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
hyper = { version = "0.14.24", features = ["full"] }
lazy_static = "1.4.0"
tokio = { version ="1.25.0", features = ["full"] }
